Comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
    <main>
       <head>
-          <h1>Título do Site</h1>
+          <h1>Cursos Grátis</h1>
       </head> 
       <article>
-          <h2>Artigo 001</h2>
-          <p>Texto do Artigo 001</p>
+          <h2>Curso de HTML5 com CSS3</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, optio neque consequuntur accusamus quasi veritatis expedita vitae fuga corrupti soluta quam. Quis autem, nihil delectus eaque eveniet optio aliquam hic!</p>
       </article>
       <article>
-          <h2>Artigo 002</h2>
-          <p>Texto Artigo 002</p>
+          <h2>Curso de JavaScript</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae obcaecati dolor eaque laborum nostrum, quas soluta! Cum, harum sequi. Quod nostrum laboriosam similique architecto voluptatibus deleniti aliquid aut vitae?</p>
       </article>
    </main> 
 </body>
