--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
    <main>
       <head>
           <h1>Cursos Grátis</h1>
+          <img class ="lado" src="imagens/curso-em-video-cor.png" alt="Curso em video">
       </head> 
       <article>
           <h2>Curso de HTML5 com CSS3</h2>
+          <img src="imagens/curso-html-css.png" alt="Curso de HTLM">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, optio neque consequuntur accusamus quasi veritatis expedita vitae fuga corrupti soluta quam. Quis autem, nihil delectus eaque eveniet optio aliquam hic!</p>
       </article>
       <article>
           <h2>Curso de JavaScript</h2>
+          <img class ="Lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae obcaecati dolor eaque laborum nostrum, quas soluta! Cum, harum sequi. Quod nostrum laboriosam similique architecto voluptatibus deleniti aliquid aut vitae?</p>
       </article>
    </main> 
